RESOLVED FIXED271983
[Cleanup] Checking needsLayout() does not need CheckedPtr in Document::updateLayoutIfDimensionsOutOfDate
https://bugs.webkit.org/show_bug.cgi?id=271983
Summary [Cleanup] Checking needsLayout() does not need CheckedPtr in Document::update...
alan
Reported 2024-04-01 12:29:18 PDT
ssia
Attachments
[fast-cq]Patch (6.98 KB, patch)
2024-04-01 12:40 PDT, alan
no flags
alan
Comment 1 2024-04-01 12:40:16 PDT
Created attachment 470701 [details] [fast-cq]Patch
EWS
Comment 2 2024-04-03 08:20:35 PDT
Committed 277002@main (0e46c0d29422): <https://commits.webkit.org/277002@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470701 [details].
Radar WebKit Bug Importer
Comment 3 2024-04-03 08:21:16 PDT
Note You need to log in before you can comment on or make changes to this bug.