[Cleanup] Checking needsLayout() does not need CheckedPtr in Document::updateLayoutIfDimensionsOutOfDate https://bugs.webkit.org/show_bug.cgi?id=271983

Reviewed by Antti Koivisto.

1. Fix FIXME in Document::DimensionsCheck. All is indeed Width | Height. Let's use that in the incoming OptionSet instead.
2. When parent document is dirty, let's just run updateLayout and return right away instead of going through the "can we optimize case" codepath (it saves calling updateRelevancyOfContentVisibilityElements/updateStyleIfNeeded twice)
3. Move isVertical/hasSpecifiedLogicalHeight/checkingLogicalWidth/checkingLogicalHeight inside [if (!requireFullLayout) { }] where they are actually used.
4. requireFullLayout should just read "element.renderer()->needsLayout() || is<HTMLInputElement>(element)" at this point (accessing const needsLayout() should not require a CheckedPtr)

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateLayoutIfDimensionsOutOfDate):
* Source/WebCore/dom/Document.h:
(WebCore::Document::updateLayoutIgnorePendingStylesheets):
(WebCore::Document::updateLayoutIfDimensionsOutOfDate):

Canonical link: https://commits.webkit.org/277002@main